@@ -1,3 +1,8 @@
+ o Imperative concreate (di)graph: fix bug of functions add_edge* of imperative
+   concrete (di)graphs which appear when the added edge [e] was already in the
+   graph [g] and one of the vertices of [e] is equal to another vertex of [g]
+   (when using the user-defined equality [G.V.equal]), but not physically equal
+   to it. This bug only occurs with OCaml version >= 4.0.
  o functions in modules Components, Dominator, Flow, Topological and Traverse
    now create smaller auxiliary hash tables
  o Graphviz: add the attribute `HtmlLabel to specify html strings.
